Added js for scroll up show

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="home__right">
         <img src="img/tickybot.svg" alt="TickyBot Logo" class="home__right-image" />
       </div>
-      <div class="scroll__up">
+      <div id="scroll" class="scroll__up">
         <a href="#header"><img src="img/top.svg" alt=""></a>
       </div>
     </section>
@@ -109,6 +109,8 @@
     <p class="footer-text">Source code is available on our GitHub page</p>
     <p class="footer-text">The app is not created by, affiliated with, or supported by Slack Technologies, Inc.</p>
   </footer>
+
+  <script src="js/script.js"></script>
 </body>
 
 </html>
